Configuration props for enable Horde cluster. Wait for channel to become available when connect from socket.

--- a/deploy_samples/haproxy/haproxy.cfg
+++ b/deploy_samples/haproxy/haproxy.cfg
@@ -1,5 +1,4 @@
 global
-    daemon
     maxconn 50000
 
 defaults
@@ -18,6 +17,7 @@ backend servers-rest
     balance roundrobin
     server webrest1 127.0.0.1:8081 maxconn 3200
     server webrest2 127.0.0.1:8091 maxconn 3200
+    server webrest3 127.0.0.1:8071 maxconn 3200
 
 frontend http-ws
     bind *:82
@@ -29,4 +29,5 @@ backend servers-ws
     balance roundrobin
     server webws1 127.0.0.1:8082 maxconn 3200
     server webws2 127.0.0.1:8092 maxconn 3200
+    server webws3 127.0.0.1:8072 maxconn 3200
 
