--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
     types: [published]
 jobs:
   deploy:
+    defaults:
+      run:
+        working-directory: channel-sender
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,4 +22,4 @@ jobs:
       - name: Config Builder
         run: docker buildx create --name mbuilder && docker buildx use mbuilder
       - name: Docker Build Multiplatform
-        run: docker buildx build --platform linux/arm64,linux/amd64 -f channel-sender/Dockerfile -t bancolombia/async-dataflow-channel-sender:${GITHUB_REF##*/} --push /Dockerfile.
+        run: docker buildx build --platform linux/arm64,linux/amd64 -t bancolombia/async-dataflow-channel-sender:${GITHUB_REF##*/} --push /Dockerfile.
