--- a/examples/front-async-angular/package.json
+++ b/examples/front-async-angular/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
-    "chanjs-client": "^0.1.0",
+    "@bancolombia/chanjs-client": "^0.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
