--- a/clients/client-dart/pubspec.yaml
+++ b/clients/client-dart/pubspec.yaml
@@ -1,20 +1,20 @@
 name: channel_sender_client
 description: Client for Async DataFlow Channel Sender
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/bancolombia/async-dataflow
 repository: https://github.com/bancolombia/async-dataflow.git
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
- web_socket_channel: ^2.1.0
- logging: ^1.0.1
- validators: 3.0.0
- uuid: 3.0.4
- build_runner: ^1.11.0
+  web_socket_channel: ^2.3.0
+  logging: ^1.1.0
+  validators: ^3.0.0
+  uuid: ^3.0.7
+  build_runner: ^2.2.0
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.16.0-nullsafety
-  mockito: ^5.0.7
+  pedantic: ^1.11.1
+  test: ^1.21.4
+  mockito: ^5.2.0
