adjust clustering feature

--- a/channel-sender/Dockerfile
+++ b/channel-sender/Dockerfile
@@ -1,7 +1,10 @@
 #===============
 # Build Stage
 #===============
-FROM elixir:1.11.4-alpine as build
+FROM elixir:1.12-alpine as build
+
+ARG BUILD_ENV=dev
+ARG BUILD_VER=0.1.2
 
 WORKDIR /build
 
@@ -13,23 +16,27 @@ RUN mix local.hex --force
 RUN mix local.rebar --force 
 
 # Install dependencies and build Release
-RUN export MIX_ENV=dev && \
+RUN export MIX_ENV=${BUILD_ENV} && \
     mix deps.get && \
     mix release channel_sender_ex
 
 # Extract Release archive to /rel for copying in next stage
-RUN APP_NAME="channel_sender_ex" && \
-    RELEASE_DIR=`ls -d _build/dev/` && \
+RUN RELEASE_DIR=`ls -d _build/${BUILD_ENV}/` && \
     mkdir /export && \
-    tar -xf "$RELEASE_DIR/$APP_NAME-0.1.1.tar.gz" -C /export
+    tar -xf "${RELEASE_DIR}/channel_sender_ex-${BUILD_VER}.tar.gz" -C /export
 
 #===================
 # Deployment Stage
 #===================
-FROM alpine
+FROM alpine:3.17
 
-RUN apk add --no-cache \
+ARG BUILD_REL=channel_sender_ex
+
+RUN apk upgrade --no-cache && \
+    apk add --no-cache \
       ncurses-libs \
+      libstdc++ \
+      libgcc \
       zlib \
       openssl \
       ca-certificates \
@@ -39,4 +46,5 @@ WORKDIR /app
 
 COPY --from=build /export/ .
 
-CMD ["bin/channel_sender_ex", "start"]
+ENTRYPOINT ["/app/bin/channel_sender_ex"]
+CMD ["start"]   
