--- a/channel-sender/deploy_samples/k8s/libcluster-kubernetes/app.yaml
+++ b/channel-sender/deploy_samples/k8s/libcluster-kubernetes/app.yaml
@@ -59,7 +59,7 @@ spec:
     spec:
       containers:
         - name: adfsender
-          image: bancolombia/async-dataflow-channel-sender:0.1.3
+          image: bancolombia/async-dataflow-channel-sender:0.1.4
           env:
             - name: POD_NAME
               valueFrom:
@@ -88,12 +88,12 @@ spec:
               memory: 250M
           volumeMounts:
           - name: config-volume
-            mountPath: /app/releases/0.1.3/env.sh
+            mountPath: /home/adfuser/releases/0.1.4/env.sh
             subPath: env.sh
           - name: config-volume
-            mountPath: /app/releases/0.1.3/runtime.exs
+            mountPath: /home/adfuser/releases/0.1.4/runtime.exs
             subPath: runtime.exs
       volumes:
         - name: config-volume
           configMap:
-            name: adfsender-config-env
+            name: adfsender-config
