--- a/channel-sender/deploy_samples/k8s/libcluster-kubernetes/configmap.yaml
+++ b/channel-sender/deploy_samples/k8s/libcluster-kubernetes/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: adfsender-config-env
+  name: adfsender-config
   namespace: sendernm
 data:
   env.sh: |-
