--- a/channel-sender/Dockerfile
+++ b/channel-sender/Dockerfile
@@ -4,7 +4,6 @@
 FROM elixir:1.12-alpine as build
 
 ARG BUILD_ENV=prod
-ARG BUILD_VER=0.1.4
 
 WORKDIR /build
 
@@ -21,9 +20,9 @@ RUN export MIX_ENV=${BUILD_ENV} && \
     mix release channel_sender_ex
 
 # Extract Release archive to /rel for copying in next stage
-RUN RELEASE_DIR=`ls -d _build/${BUILD_ENV}/` && \
+RUN RELEASE_FILE=`ls -d _build/${BUILD_ENV}/*.gz` && \
     mkdir /export && \
-    tar -xf "${RELEASE_DIR}/channel_sender_ex-${BUILD_VER}.tar.gz" -C /export
+    tar -xf "${RELEASE_FILE}" -C /export
 
 #===================
 # Deployment Stage
