--- a/channel-sender/deploy_samples/k8s/libcluster-kubernetes/app.yaml
+++ b/channel-sender/deploy_samples/k8s/libcluster-kubernetes/app.yaml
@@ -59,7 +59,7 @@ spec:
     spec:
       containers:
         - name: adfsender
-          image: bancolombia/async-dataflow-channel-sender:0.1.4
+          image: bancolombia/async-dataflow-channel-sender:0.1.5
           env:
             - name: POD_NAME
               valueFrom:
@@ -88,11 +88,11 @@ spec:
               memory: 250M
           volumeMounts:
           - name: config-volume
-            mountPath: /home/adfuser/releases/0.1.4/env.sh
+            mountPath: /app/config/env.sh
             subPath: env.sh
           - name: config-volume
-            mountPath: /home/adfuser/releases/0.1.4/runtime.exs
-            subPath: runtime.exs
+            mountPath: /app/config/config.yaml
+            subPath: config.yaml
       volumes:
         - name: config-volume
           configMap:
