--- a/clients/client-js/package.json
+++ b/clients/client-js/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@bancolombia/chanjs-client",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "AsycnDataflow websocket browser client. By Bancolombia",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "nyc mocha --reporter spec --reporter mocha-sonarqube-reporter --reporter-options output=coverage/xunit.xml --require source-map-support/register --require ts-node/register 'test/**/*.test.ts'",
+    "test": "nyc mocha --reporter spec --reporter mocha-sonarqube-reporter --reporter-options output=coverage/xunit.xml --require source-map-support/register --require jsdom-global/register --require ts-node/register 'test/**/*.test.ts'",
+    "test-local": "mocha --require jsdom-global/register --require source-map-support/register --require ts-node/register 'test/**/*.test.ts'",
     "watch:build": "tsc --watch",
     "sonar-scanner": "node_modules/sonar-scanner/bin/sonar-scanner",
     "prepare": "npm run build",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint --ext .ts ."
   },
   "nyc": {
     "extension": [
@@ -41,9 +43,15 @@
     "@types/mocha": "^5.2.5",
     "@types/pusher-js": "^4.2.0",
     "@types/sinon": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "chai": "^4.2.0",
+    "deps": "^1.0.0",
+    "eslint": "^8.49.0",
     "fast-text-encoding": "^1.0.3",
     "fetch-mock": "^7.0.7",
+    "jsdom": "22.1.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^8.1.3",
     "mocha-sonarqube-reporter": "^1.0.2",
     "mock-socket": "^9.0.6",
@@ -55,9 +63,9 @@
     "ts-mock-imports": "^1.2.1",
     "ts-mockito": "^2.3.1",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-sonarts": "^1.8.0",
-    "typescript": "^3.1.1"
+    "typescript": "^5.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lru-cache": "^10.0.1"
+  }
 }
