--- a/.github/workflows/release-client-js.yml
+++ b/.github/workflows/release-client-js.yml
@@ -10,9 +10,9 @@ jobs:
         working-directory: clients/client-js
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     # Setup .npmrc file to publish to npm
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v3
       with:
         node-version: '18.x'
         registry-url: 'https://registry.npmjs.org'
@@ -20,10 +20,10 @@ jobs:
     - run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v3
       with:
         registry-url: 'https://npm.pkg.github.com'
-        scope: 'chanjs-client'
+        scope: '@bancolombia'
     - run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
