feat: setup trigger by tag name
setup trigger only on pushing a tag with certain prefix

--- a/.github/workflows/release-client-js.yml
+++ b/.github/workflows/release-client-js.yml
@@ -1,8 +1,9 @@
 name: Deploy Async DataFlow channel sender JS client
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - 'chanjs_*' # Push events to matching chanjs_*, i.e. chanjs_0.2.0
 jobs:
   build:
     defaults:
