--- a/clients/client-dart/pubspec.yaml
+++ b/clients/client-dart/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   build_runner: ^2.2.0
 
 dev_dependencies:
-  pedantic: ^1.11.1
   test: ^1.21.4
   mockito: ^5.2.0
+  dart_code_linter: ^1.1.1
+  flutter_lints: ^2.0.3
