--- a/channel-bridge/deploy_samples/k8s/libcluster-kubernetes-dnssrv/configmap.yaml
+++ b/channel-bridge/deploy_samples/k8s/libcluster-kubernetes-dnssrv/configmap.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: adfbridge-config
-  namespace: bridgenm
+  name: adfsender-config
+  namespace: sendernm
 data:
   env.sh: |-
     #!/bin/sh
     export RELEASE_DISTRIBUTION=name
-    export RELEASE_NODE=channel_bridge_ex@${POD_NAME}.${POD_NAME_DNS}
+    export RELEASE_NODE=channel_sender_ex@$(hostname -f)
   config.yaml: |-
     bridge:
       port: 8080
@@ -59,13 +59,10 @@ data:
         #   processor_max_demand: 1
 
       topology:
-        strategy: Elixir.Cluster.Strategy.Kubernetes
+        strategy: Elixir.Cluster.Strategy.Kubernetes.DNSSRV
         config: 
-          mode: :hostname
-          kubernetes_ip_lookup_mode: :pods
-          kubernetes_service_name: "adfbridge-headless"
-          kubernetes_node_basename: "channel_bridge_ex"
-          kubernetes_selector: "cluster=beam"
+          service: "adfbridge-headless"
+          application_name: "channel_bridge_ex"
           namespace: "bridgenm"
           polling_interval: 5000
 
@@ -92,5 +89,3 @@ data:
 
     logger:
       level: debug
-
-
