--- a/channel-bridge/deploy_samples/k8s/libcluster-kubernetes-dns/app.yaml
+++ b/channel-bridge/deploy_samples/k8s/libcluster-kubernetes-dns/app.yaml
@@ -63,11 +63,11 @@ spec:
             - name: POD_NAME
               valueFrom:
                 fieldRef:
-                  fieldPath: metadata.name    # requires read-pods-role role 
-            - name: POD_NAME_DNS  # see declared file env.sh in configMap
-              value: adfbridge-headless.bridgenm.svc.cluster.local                          
-            - name: RELEASE_COOKIE
+                  fieldPath: status.podIP
+            - name: ERLANG_COOKIE
               value: "secret"
+            - name: RELEASE_COOKIE
+              value: "secret"              
           ports:
             - name: rest-http
               protocol: TCP
