feat: logic to close channel on inactivity, added webhook mutator.

--- a/channel-bridge/apps/bridge_helper_config/test/test-config.yaml
+++ b/channel-bridge/apps/bridge_helper_config/test/test-config.yaml
@@ -4,7 +4,9 @@ bridge:
     - $.subject
   request_channel_identifier:
     - "$.req_headers['sub']"
-  cloud_event_mutator: Elixir.BridgeCore.CloudEvent.Mutator.DefaultMutator
+  cloud_event_mutator:
+    mutator_module: Elixir.BridgeCore.CloudEvent.Mutator.DefaultMutator
+
   channel_authenticator: Elixir.BridgeRestapiAuth.PassthroughProvider
   event_bus:
     rabbitmq:
