--- a/channel-bridge/config-local.yaml
+++ b/channel-bridge/config-local.yaml
@@ -18,6 +18,7 @@ bridge:
 #          value: "acme"
 
   channel_authenticator: Elixir.BridgeRestapiAuth.PassthroughProvider
+
   event_bus:
     rabbitmq:
       bindings:
@@ -50,7 +51,15 @@ bridge:
       producer_prefetch: 2
       processor_concurrency: 2
       processor_max_demand: 1
-      
+    
+#    pubsub:
+#      subscription: "projects/my-project-0000/subscriptions/adf-bridge"
+#      auth_source: service_account
+#      credentials_file: <path to your credentials file>
+#      producer_concurrency: 10
+#      processor_concurrency: 10
+#      processor_max_demand: 1
+
     # sqs:
     #   queue: sample-queue
     #   ##producer and processor concurrency
@@ -58,6 +67,7 @@ bridge:
     #   producer_prefetch: 2
     #   processor_concurrency: 2
     #   processor_max_demand: 1
+
   topology:
     strategy: Elixir.Cluster.Strategy.Gossip
     # strategy: Elixir.Cluster.Strategy.Kubernetes
@@ -69,9 +79,15 @@ bridge:
     #   kubernetes_selector: "cluster=beam"
     #   namespace: "bridgenm"
     #   polling_interval: 5000
+
 #  apps:
 #    - name: demo1
 #      timeout: 5000
+
+  secrets:
+    # Default. implemented in app apps/bridge_secretsmanager.
+    # You can implement your own, please refer to `BridgeCore.SecretProvider` behaviour.
+    provider: Elixir.BridgeSecretManager
 
 sender:
   url: http://localhost:8081
