--- a/channel-bridge/deploy_samples/k8s/libcluster-kubernetes-dnssrv/gateway.yaml
+++ b/channel-bridge/deploy_samples/k8s/libcluster-kubernetes-dnssrv/gateway.yaml
@@ -25,6 +25,8 @@ metadata:
 spec:
   hosts:
     - adfbridge.example.com
+  gateways:
+    - adfbridge-gw
   http:
     - match:
         - uri:
@@ -59,9 +61,6 @@ metadata:
 spec:
   hosts:
   - adfbridge-headless
-  # - adfbridge-headless.bridgenm.svc.cluster.local
-  # - adfbridge-0.adfbridge-headless.bridgenm.svc.cluster.local
-  # - adfbridge-1.adfbridge-headless.bridgenm.svc.cluster.local
   tcp:
   - match:
     - port: 4369
