--- a/channel-bridge/deploy_samples/k8s/libcluster-kubernetes/configmap.yaml
+++ b/channel-bridge/deploy_samples/k8s/libcluster-kubernetes/configmap.yaml
@@ -7,7 +7,7 @@ data:
   env.sh: |-
     #!/bin/sh
     export RELEASE_DISTRIBUTION=name
-    export RELEASE_NODE=channel_bridge_ex@${POD_NAME}.${POD_NAME_DNS}
+    export RELEASE_NODE=adf_bridge@${POD_NAME}.${POD_NAME_DNS}
   config.yaml: |-
     bridge:
       port: 8080
@@ -15,8 +15,12 @@ data:
         - $.subject
       request_channel_identifier:
         - "$.req_headers['sub']"
-      cloud_event_mutator: Elixir.BridgeCore.CloudEvent.Mutator.DefaultMutator
-      channel_authenticator: Elixir.BridgeRestapiAuth.PassthroughProvider
+      cloud_event_mutator:
+        mutator_module: Elixir.BridgeCore.CloudEvent.Mutator.DefaultMutator
+
+      channel_authenticator:
+        auth_module: Elixir.BridgeRestapiAuth.PassthroughProvider
+
       event_bus:
         rabbitmq:
           bindings:
@@ -36,27 +40,19 @@ data:
 
           ##
           ## Optionally and for local dev environments  Rabbitmq host and credentials can be configured directly 
-          ## here:
-          username: <your user>
-          password: <your pw>
-          hostname: localhost
-          port: 5672
+          ## here:
+          username: 
+          password: 
+          hostname: rabbitmq-service.rabbitmq.svc.cluster.local
+          port: 5671
           virtualhost: /
           ssl: false
 
-          ## producer and processor concurrency
+          ## producer and processor concurrency
           producer_concurrency: 1
           producer_prefetch: 2
           processor_concurrency: 2
           processor_max_demand: 1
-          
-        # sqs:
-        #   queue: sample-queue
-        #   ## producer and processor concurrency
-        #   producer_concurrency: 1
-        #   producer_prefetch: 2
-        #   processor_concurrency: 2
-        #   processor_max_demand: 1
 
       topology:
         strategy: Elixir.Cluster.Strategy.Kubernetes
@@ -64,10 +60,15 @@ data:
           mode: :hostname
           kubernetes_ip_lookup_mode: :pods
           kubernetes_service_name: "adfbridge-headless"
-          kubernetes_node_basename: "channel_bridge_ex"
+          kubernetes_node_basename: "adf_bridge"
           kubernetes_selector: "cluster=beam"
           namespace: "bridgenm"
           polling_interval: 5000
+
+      secrets:
+        # Default. implemented in app apps/bridge_secretsmanager.
+        # You can implement your own, please refer to `BridgeCore.SecretProvider` behaviour.
+        provider: Elixir.BridgeSecretManager
 
     sender:
       url: http://adfsender.sendernm.svc.cluster.local:8081
@@ -92,5 +93,3 @@ data:
 
     logger:
       level: debug
-
-
