feat: added core specs (#75)
* feat: implemented invocation for stopping routing processes

* feat: implemented behaviour for secrets retrieval.

* fix: renamed BridgeRestapiAuth.ParseOnlyProvider to JwtParseOnlyProvider

* feat: core upgrades

* feat: update build workflow

* fix: linter and dyalizer fixes

--- a/.github/workflows/build-channel-bridge.yaml
+++ b/.github/workflows/build-channel-bridge.yaml
@@ -1,37 +1,101 @@
 name: "build channel-bridge"
 on:
-  pull_request:
-    paths:
-      - 'channel-bridge/**' 
+  push:
     branches:
-      - master
+      - main
       - feature/*
       - fix/*
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    defaults:
-      run:
-        working-directory: channel-bridge
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
     name: Build and test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./channel-bridge
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Elixir
-        uses: erlef/setup-beam@v1.15.2
+      - name: Generate a token of Github APP
+        id: generate_token
+        if: github.ref == 'refs/heads/main'
+        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
         with:
-          elixir-version: '1.15.7' # Define the elixir version [required]
-          otp-version: '26' # Define the OTP version [required]
+          app_id: ${{ secrets.APP_ID_ADMIN_GITHUB }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY_ADMIN_GITHUB }}
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        if: github.ref == 'refs/heads/main'
+        with:
+          token: ${{ steps.generate_token.outputs.token }}
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        if: github.ref != 'refs/heads/main'
+
+      - name: Verify Conventional Commits
+        uses: amannn/action-semantic-pull-request@0723387faaf9b38adef4775cd42cfd5155ed6017 # v5.5.3
+        if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up NodeJS
+        if: github.ref == 'refs/heads/main'
+        uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4.0.3
+        with:
+          node-version-file: './channel-bridge/.nvmrc'
+      - name: Set up Semantic Release
+        if: github.ref == 'refs/heads/main'
+        run: npm -g install @semantic-release/git semantic-release@23.0.0
+      - name: Semantic Release
+        if: github.ref == 'refs/heads/main'
+        run: npx semantic-release@23.0.0
+        env:
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+
+      - name: Set up Elixir
+        uses: erlef/setup-beam@v1.17.1
+        with:
+          version-type: strict
+          version-file: "./channel-bridge/.tool-versions"
       - name: Restore dependencies cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: deps
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
           restore-keys: ${{ runner.os }}-mix-
       - name: Install dependencies
         run: mix deps.get
-      - name: Run tests
-        run: mix test --cover --export-coverage defaul
-      - name: Calculate coverage
-        run: mix test.coverage
+        env:
+          SKIP_GIT_HOOKS: 'true'
+      - name: Code analysis
+        run: mix credo --strict && mix dialyzer
+      - name: Test generated code
+        run: mix test
+      - name: Tests & Coverage (main)
+        if: github.ref == 'refs/heads/main'
+        run: mix coveralls.github --umbrella
+        env:
+          CI_ENV: 'true'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Tests & Coverage (pull requests)
+        if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
+        run: mix coveralls.lcov --umbrella
+        env:
+          CI_ENV: 'true'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup PR Report tool
+        if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
+        uses: hrishikesh-kadam/setup-lcov@v1
+      - name: Validate code coverage
+        if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
+        uses: zgosalvez/github-actions-report-lcov@v3
+        with:
+          coverage-files: ./channel-bridge/cover/lcov.info
+          minimum-coverage: 70
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          update-comment: true
