--- a/examples/back-async-java/applications/app-service/build.gradle
+++ b/examples/back-async-java/applications/app-service/build.gradle
@@ -2,15 +2,27 @@ apply plugin: 'org.springframework.boot'
 
 dependencies {
 	implementation project(':rest-consumer')
-	compile 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation project(':reactive-web')
     implementation project(':model')
     implementation project(':usecase')
     implementation 'org.springframework.boot:spring-boot-starter'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
+    testImplementation 'com.tngtech.archunit:archunit:1.3.0'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
-task explodedJar(type: Copy) {
+tasks.register('explodedJar', Copy) {
     with jar
-    into "${buildDir}/exploded"
+    into layout.buildDirectory.dir("exploded")
+}
+
+jar {
+    // To disable the *-plain.jar
+    enabled = false
+}
+
+bootJar {
+    // Sets output jar name
+    archiveFileName = "${project.getParent().getName()}.${archiveExtension.get()}"
 }
