--- a/examples/back-async-java/build.gradle
+++ b/examples/back-async-java/build.gradle
@@ -1,31 +1,35 @@
 buildscript {
 	ext {
-		cleanArchitectureVersion = '1.9.8'
-		springBootVersion = '2.4.2'
-		sonarVersion = '3.0'
-		jacocoVersion = '0.8.5'
-        lombokVersion = '1.18.16'
+		cleanArchitectureVersion = '3.17.21'
+		springBootVersion = '3.3.3'
+		sonarVersion = '5.1.0.4882'
+		jacocoVersion = '0.8.12'
+		pitestVersion = '1.15.0'
+        lombokVersion = '1.18.34'
 	}
 }
 
 plugins {
 	id 'co.com.bancolombia.cleanArchitecture' version "${cleanArchitectureVersion}"
-	id 'org.springframework.boot' version "${springBootVersion}"
+	id 'org.springframework.boot' version "${springBootVersion}" apply false
+	id 'info.solidsoft.pitest' version "${pitestVersion}" apply false
 	id 'org.sonarqube' version "${sonarVersion}"
 	id 'jacoco'
 }
 
-sonarqube {
+sonar {
     def modules = subprojects.projectDir.collect { "${it.toString().replace(project.projectDir.toString() + "/", "")}" }
     properties {
-        property "sonar.sourceEnconding", "UTF-8"
+        property "sonar.sourceEncoding", "UTF-8"
         property "sonar.modules", "${modules.join(',')}"
         property "sonar.sources", "src,deployment,settings.gradle,main.gradle,build.gradle,${modules.collect { "${it}/build.gradle" }.join(',')}"
+        property "sonar.exclusions","**/MainApplication.java"
         property "sonar.test", "src/test"
         property "sonar.java.binaries", ""
         property "sonar.junit.reportsPath", ""
         property "sonar.java.coveragePlugin", "jacoco"
-        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacocoMergedReport/jacocoMergedReport.xml"
+        property "sonar.externalIssuesReportPaths", "build/issues.json"
     }
 }
 
