--- a/examples/back-async-java/gradle.properties
+++ b/examples/back-async-java/gradle.properties
@@ -1,5 +1,8 @@
 package=co.com.bancolombia
-systemProp.version=1.9.8
+systemProp.version=3.17.21
 reactive=true
 lombok=true
+metrics=true
+language=java
 org.gradle.parallel=true
+systemProp.sonar.gradle.skipCompile=true
