--- a/examples/back-async-java/infrastructure/entry-points/reactive-web/build.gradle
+++ b/examples/back-async-java/infrastructure/entry-points/reactive-web/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     implementation project(':model')
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
